--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,10 +1,10 @@
 {% load staticfiles %}
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html lang="en" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html lang="en" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
   <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -14,15 +14,15 @@
 
       {% block css_meta %}
         {% block external_css %}
-          <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+          <link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap.min.css">
           <style>
             body {
                 padding-top: 50px;
                 padding-bottom: 20px;
             }
           </style>
-          <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-          <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+          <link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap-theme.min.css">
+          <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
         {% endblock %}
         {% block internal_css %}
           <link href="{% static 'openstash/css/openstash.css' %}" rel="stylesheet">
@@ -30,7 +30,7 @@
       {% endblock %}
 
       {% block header_js %}
-      <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+      <script src="/static/modernizer/modernizr.js"></script>
       <script src="/static/rockit/js/libs/requirejs/require.js" data-main="{% static 'rockit/js/main.js' %}"></script>
       {% endblock %}
   </head>
@@ -40,15 +40,6 @@
     <![endif]-->
 
     {% include 'base/header/header.html' %}
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div>
 
     <div class="container">
 
@@ -62,9 +53,9 @@
     </div> <!-- /container -->
 
     {% block js %}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="/static/jquery/dist/jquery.min.js"></script>
       {% block js_bootstrap %}
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+        <script src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
       {% endblock %}
       {% block js_inline %}{% endblock %}
     {% endblock %}
