--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -8,7 +8,7 @@
   <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title>{% block title %}openstash - {% endblock %}{% block page_title %}{% endblock %}</title>
+      <title>{% block title %}rockit server - {% endblock %}{% block page_title %}{% endblock %}</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -31,7 +31,7 @@
 
       {% block header_js %}
       <script src="/static/modernizer/modernizr.js"></script>
-      <script src="/static/rockit/js/libs/requirejs/require.js" data-main="{% static 'rockit/js/main.js' %}"></script>
+      <script src="/static/requirejs/require.js" data-main="{% static 'rockit/js/main.js' %}"></script>
       {% endblock %}
   </head>
   <body>
@@ -42,6 +42,13 @@
     {% include 'base/header/header.html' %}
 
     <div class="container">
+
+      {% block breadcrumb %}
+      <ol class="breadcrumb">
+        <li><a href="/"><i class="fa fa-home"></i></a></li>
+        {% block breadcrumb_items %}{% endblock %}
+      </ol>
+      {% endblock %}
 
       {% block base_section %}
         {% block section %}{% endblock %}
