--- a/templates/base/header/header.html
+++ b/templates/base/header/header.html
@@ -10,10 +10,11 @@
       <a class="navbar-brand" href="#">rockit server</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="settings">Settings</a></li>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/nodes">Nodes</a></li>
+        <li><a href="/nodes">Mixes</a></li>
+        <li><a href="/settings">Settings</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
