--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -41,7 +41,7 @@
 
     {% include 'base/header/header.html' %}
 
-    <div class="container">
+    <div class="container" {% block inject_controller %}{% endblock %}>
 
       {% block breadcrumb %}
       <ol class="breadcrumb">
