Updates to use routes

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -50,6 +50,8 @@
       </ol>
       {% endblock %}
 
+      <div ng-view>Laddar vy ...</div>
+
       {% block base_section %}
         {% block section %}{% endblock %}
       {% endblock %}
