--- a/templates/base/header/header.html
+++ b/templates/base/header/header.html
@@ -7,12 +7,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">rockit server</a>
+      <a class="navbar-brand" href="/#home">rockit server</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="/">Home</a></li>
-        <li><a href="/nodes">Nodes</a></li>
+        <li class="active"><a href="/#home">Home</a></li>
+        <li><a href="/#nodes">Nodes</a></li>
         <li><a href="/nodes">Mixes</a></li>
         <li><a href="/settings">Settings</a></li>
       </ul>
