--- a/templates/base/header/header.html
+++ b/templates/base/header/header.html
@@ -13,8 +13,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="/#home">Home</a></li>
         <li><a href="/#nodes">Nodes</a></li>
-        <li><a href="/nodes">Mixes</a></li>
-        <li><a href="/settings">Settings</a></li>
+        <li><a href="/#nodes">Mixes</a></li>
+        <li><a href="/#settings">Settings</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
