--- a/templates/partials/nodes/details.html
+++ b/templates/partials/nodes/details.html
@@ -5,7 +5,7 @@
   <div class="panel-body">
     <form class="form-horizontal" role="form" data-ng-show="selected.commands.length">
       <div class="form-group" data-ng-repeat="command in selected.commands">
-        <label class="col-sm-3 control-label" data-ng-bind="::command.name"></label>
+        <label class="col-sm-3 control-label" data-ng-bind="::command.name  "></label>
         <div class="col-sm-8">
           <p class="form-control-static" data-ng-bind="::detail.value"></p>
         </div>
@@ -19,7 +19,7 @@
   <div class="panel-body">
     <form class="form-horizontal" role="form" data-ng-show="selected.details.length">
       <div class="form-group" data-ng-repeat="detail in selected.details" data-ng-if="detail.value">
-        <label class="col-sm-3 control-label" data-ng-bind="::detail.title"></label>
+        <label class="col-sm-3 control-label" data-ng-bind="::detail.title | translate"></label>
         <div class="col-sm-8">
           <p class="form-control-static" data-ng-bind="::detail.value"></p>
         </div>
