--- a/templates/partials/nodes/details.html
+++ b/templates/partials/nodes/details.html
@@ -1,7 +1,7 @@
 <h2 data-ng-bind="::selected.name"></h2>
 
 <div class="panel panel-default">
-  <div class="panel-heading">Commands available</div>
+  <div class="panel-heading" data-ng-bind="'Commands available' | translate">Commands available</div>
   <div class="panel-body">
     <form class="form-horizontal" role="form" data-ng-show="selected.commands.length">
       <div class="form-group" data-ng-repeat="command in selected.commands">
