--- a/static/rockit/css/rockit.css
+++ b/static/rockit/css/rockit.css
@@ -1,3 +1,15 @@
 body {
   background-color: #fcfcfc;
 }
+
+.selectable {
+  cursor: pointer;
+}
+
+.ng-hide {
+  /* this is just another form of hiding an element */
+  display: block!important;
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
