--- a/templates/base/header/header.html
+++ b/templates/base/header/header.html
@@ -11,10 +11,10 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="/#home">Home</a></li>
-        <li><a href="/#nodes">Nodes</a></li>
-        <li><a href="/#nodes">Mixes</a></li>
-        <li><a href="/#settings">Settings</a></li>
+        <li data-ng-class="{ 'active': 'home' == path}"><a href="/#home">Home</a></li>
+        <li data-ng-class="{ 'active': 'nodes' == path}"><a href="/#nodes">Nodes</a></li>
+        <li data-ng-class="{ 'active': 'mixes' == path}"><a href="/#nodes">Mixes</a></li>
+        <li data-ng-class="{ 'active': 'settings' == path}"><a href="/#settings">Settings</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
