--- a/templates/partials/settings/settings.html
+++ b/templates/partials/settings/settings.html
@@ -1,3 +1,5 @@
+<h2>Settings</h2>
+
 <div class="row" data-ng-init="loadAvailableSettings()">
 	<div class="col-md-2">
 		<ul class="nav nav-pills nav-stacked">
