--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -41,7 +41,7 @@
 
     {% include 'base/header/header.html' %}
 
-    <div class="container" {% block inject_controller %}{% endblock %}>
+    <div class="container">
 
       <div ng-view>Laddar vy ...</div>
 
