--- a/templates/partials/commands/SwitchBinary.html
+++ b/templates/partials/commands/SwitchBinary.html
@@ -1,2 +1,2 @@
 <label class="col-sm-3 control-label" data-ng-bind="::command.name | translate"></label>
-<label class="col-sm-2 toggle" data-switchbinary data-ng-model="command"></label>
+<label class="col-sm-2 toggle selectable" data-switchbinary data-ng-model="command"></label>
