--- a/templates/partials/nodes/nodes.html
+++ b/templates/partials/nodes/nodes.html
@@ -1,5 +1,17 @@
-<h2>Nodes</h2>
+<div class="page-header">
+  <h2>Nodes</h2>
+</div>
 
+<!--
+<div class="row">
+  <div class="col-md-5">
+    <div class="form-search search-only">
+      <i class="search-icon glyphicon glyphicon-search"></i>
+      <input class="form-control search-query">
+    </div>
+  </div>
+</div>
+-->
 
 <div class="well selectable" data-ng-repeat="node in nodes" data-ng-click="onSelectedNode(node)">
   <div class="row">
