--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -23,6 +23,7 @@
           <link rel="stylesheet" href="/static/Bootflat/css/bootstrap.min.css">
           <link rel="stylesheet" href="/static/Bootflat/bootflat/css/bootflat.min.css">
           <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
+          <link rel="stylesheet" href="/static/toastr/toastr.min.css">
         {% endblock %}
         {% block internal_css %}
           <link href="{% static 'rockit/css/rockit.css' %}" rel="stylesheet">
