--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -44,7 +44,7 @@
 
     <div class="container">
 
-      <div ng-view>
+      <div class="main" ng-view>
         {% include 'base/spinner.html' %}
       </div>
 
