--- a/templates/base/home/plugins.html
+++ b/templates/base/home/plugins.html
@@ -1,8 +1,9 @@
-<div class="panel panel-default" data-ng-controller="AssociationsCtrl" data-ng-init="loadAssociations()" data-ng-cloak>
-  <div class="panel-heading">Available plugins</div>
-  <div class="panel-body">
-    <p data-ng-repeat="association in associations">
-      <span data-ng-bind="::association.name"></span> - <span data-ng-bind="::association.description"></span>
-    </p>
+<div class="col-md-2">
+  <div class="panel panel-default ng-hide text-center" data-ng-controller="AssociationsCtrl"
+    data-ng-init="loadAssociations()" ng-show="associations">
+    <div class="panel-heading">Available plugins</div>
+    <div class="panel-body">
+      <h1 data-ng-bind="::associations.length"></h1>
+    </div>
   </div>
 </div>
