--- a/templates/partials/nodes/details.html
+++ b/templates/partials/nodes/details.html
@@ -1,25 +1,30 @@
-<div class="page-header" data-ng-model="selected.name">
-  <h2 data-ng-bind="selected.name" data-ng-click="onEdit()" data-ng-hide="editMode"></h2>
+<div data-ng-hide="selected">
+  {% include 'base/spinner.html' %}
+</div>
 
-  <form class="form-inline" role="form" data-ng-show="">
-    <div class="form-group">
-      <input data-ng-model="selected.name" type="text" class="form-control" >
-      <button type="submit" class="btn btn-primary" data-ng-click="done(onUpdateName)">Save</button>
-      <button type="button" class="btn" data-ng-click="cancel()">Cancel</button>
+<div class="ng-hide" data-ng-show="selected">
+  <div class="row">
+    <div class="col-sm-2 col-xs-4">
+      <p href="#" class="thumbnail">
+        <img src="http://placehold.it/150">
+      </p>
     </div>
-  </form>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-heading" data-ng-bind="'Commands available' | translate">Commands available</div>
-  <div class="panel-body">
-    <form class="form-horizontal" role="form" data-ng-show="selected.commands.length">
-      <div class="form-group" data-ng-repeat="command in selected.commands">
-        <div data-ng-include="command.partial"></div>
-      </div>
-    </form>
-    <p data-ng-hide="selected.commands.length"> No available commands exists for this node</div></p>
+    <div class="col-sm-10 col-xs-8">
+      <div class="page-header editable" data-ng-model="selected.name" data-on-update="onUpdateName(value)"></div>
+    </div>
   </div>
-</div>
 
-<div data-ng-include="settings">
+  <div class="panel panel-default">
+    <div class="panel-heading" data-ng-bind="'Commands available' | translate">Commands available</div>
+    <div class="panel-body">
+      <form class="form-horizontal" role="form" data-ng-show="selected.commands.length">
+        <div class="form-group" data-ng-repeat="command in selected.commands">
+          <div data-ng-include="command.partial"></div>
+        </div>
+      </form>
+      <p data-ng-hide="selected.commands.length"> No available commands exists for this node</div></p>
+    </div>
+  </div>
+
+  <div data-ng-include="settings">
+</div>
