--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load compress %}
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html lang="en" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -26,7 +27,9 @@
           <link rel="stylesheet" href="/static/toastr/toastr.min.css">
         {% endblock %}
         {% block internal_css %}
-          <link href="{% static 'rockit/css/rockit.css' %}" rel="stylesheet">
+          {% compress css %}
+          <link href="{% static 'rockit/css/rockit.less' %}" rel="stylesheet" type="text/less" media="all">
+          {% endcompress %}
         {% endblock %}
       {% endblock %}
 
