--- a/static/rockit/css/common/common.less
+++ b/static/rockit/css/common/common.less
@@ -7,18 +7,19 @@ p.thumbnail {
   margin: 40px 0;
 }
 
-.main {
-  min-height: 300px;
+.btn-mixes {
+  height: 4.3em;
 }
 
-.ng-hide {
-  /* this is just another form of hiding an element */
-  display: block!important;
-  position: absolute;
-  top: -9999px;
-  left: -9999px;
+.margin-top {
+  margin-top: 2em;
+}
+
+.main {
+  min-height: 300px;
 }
 
 .selectable {
   cursor: pointer;
 }
+
