--- a/templates/partials/mixes/mixes.html
+++ b/templates/partials/mixes/mixes.html
@@ -7,8 +7,19 @@
   <p>Controll Rockit nodes behavior by given when it should start</p>
 </div>
 <div class="row">
-  <div class="col-xs-1" data-ng-repeat="when in criteria.when">
-    <button type="button" class="btn btn-info btn-lg"><span data-ng-bind="when.association.name"></span></button>
+  <div class="col-xs-1" data-ng-repeat="item in when.data">
+    <button type="button" class="btn btn-default btn-lg btn-mixes"
+      data-ng-click="toggle(when, item)" data-ng-class="{ 'active': when.selected == item }">
+      <span data-ng-bind="item.association.name"></span>
+    </button>
+  </div>
+  <div class="margin-top col-xs-12" data-ng-show="when.selected">
+    <button type="button" class="btn btn-default btn-lg btn-mixes"
+      data-ng-repeat="item in when.selected.items"
+      data-ng-click="onSelectWhen(item)"
+      data-ng-class="{ 'active': criteria.when == item }">
+      <span data-ng-bind="item.name"></span>
+    </button>
   </div>
 </div>
 
