Added custom fonts

--- a/static/rockit/css/common/common.less
+++ b/static/rockit/css/common/common.less
@@ -7,10 +7,6 @@ p.thumbnail {
   margin: 40px 0;
 }
 
-.btn-mixes {
-  height: 4.3em;
-}
-
 .margin-top {
   margin-top: 2em;
 }
@@ -23,3 +19,6 @@ p.thumbnail {
   cursor: pointer;
 }
 
+.icon-large {
+  font-size: 60px;
+}
