--- a/templates/base/header/header.html
+++ b/templates/base/header/header.html
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li data-ng-class="{ 'active': 'home' == path}"><a href="/#home">Home</a></li>
         <li data-ng-class="{ 'active': 'nodes' == path}"><a href="/#nodes">Nodes</a></li>
-        <li data-ng-class="{ 'active': 'mixes' == path}"><a href="/#mixes">Mixes</a></li>
+        <li data-ng-class="{ 'active': 'actions' == path}"><a href="/#actions">Actions</a></li>
         <li data-ng-class="{ 'active': 'settings' == path}"><a href="/#settings">Settings</a></li>
       </ul>
     </div><!--/.nav-collapse -->
