--- a/templates/base/header/header.html
+++ b/templates/base/header/header.html
@@ -11,7 +11,7 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li data-ng-class="{ 'active': 'home' == path}"><a href="/#home">Home</a></li>
+        <li data-ng-class="{ 'active': 'mixes' == path}"><a href="/#mixes">Mix it</a></li>
         <li data-ng-class="{ 'active': 'nodes' == path}"><a href="/#nodes">Nodes</a></li>
         <li data-ng-class="{ 'active': 'actions' == path}"><a href="/#actions">Actions</a></li>
         <li data-ng-class="{ 'active': 'settings' == path}"><a href="/#settings">Settings</a></li>
