--- a/templates/partials/actions/details.html
+++ b/templates/partials/actions/details.html
@@ -1,3 +1,28 @@
-<div class="page-header">
-  <h2>Details</h2>
+<div data-ng-hide="selected" data-ng-init="getSelectedAction()">
+  {% include 'base/spinner.html' %}
+</div>
+
+<div class="ng-hide" data-ng-show="selected">
+  <div class="row">
+    <div class="col-sm-2 col-xs-4">
+      <p href="#" class="thumbnail">
+        <img src="http://placehold.it/150">
+      </p>
+    </div>
+    <div class="col-sm-10 col-xs-8">
+      <div class="page-header editable" data-ng-model="selected.name" data-on-update="onUpdateName(value)"></div>
+      <div data-ng-bind="selected.description"></div>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">Associated mix</div>
+    <div class="panel-body">
+      <p data-ng-hide="selected.commands.length"> No available commands exists for this node</div></p>
+
+      <p>
+        <button type="button" class="btn btn-block">Run this mix</button>
+      </p>
+    </div>
+  </div>
 </div>
