--- a/static/rockit/css/common/common.less
+++ b/static/rockit/css/common/common.less
@@ -24,5 +24,18 @@ p.thumbnail {
 }
 
 .icon-large {
-  font-size: 60px;
+  font-size: 40px;
+  margin: 0.5em;
+}
+
+.criteria-group {
+
+  hr {
+    border-top-width: 2px;
+  }
+
+  hr.active {
+    border-top-color: #26A65B;
+  }
+
 }
