--- a/templates/partials/mixes/mixes.html
+++ b/templates/partials/mixes/mixes.html
@@ -16,5 +16,8 @@
 </div>
 
 {% include 'base/mixes/when.html' %}
+<div class="filler" />
 {% include 'base/mixes/then.html' %}
+<div class="filler" />
 {% include 'base/mixes/finish.html' %}
+<div class="filler" />
