--- a/templates/partials/nodes/nodes.html
+++ b/templates/partials/nodes/nodes.html
@@ -26,7 +26,7 @@
         <span class="label label-info" data-ng-bind="::node.association.name"></span>
       </div>
     </div>
-    <div class="col-md-2 col-sm-3">
+    <div class="col-md-2 col-sm-3 margin-top">
       <button type="button" class="btn btn-primary btn-block" data-ng-click="onSelectedNode(node)">Detail</button>
     </div>
   </div>
