--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -58,6 +58,10 @@
       <hr>
 
       {% include 'base/footer/footer.html' %}
+
+      <div class="btn-group-vertical pull-right">
+        <button type="button" class="btn btn-default"><i class="fa fa-chevron-up"></i></button>
+      </div>
     </div> <!-- /container -->
 
     {% block js %}
