--- a/templates/base/mixes/criteria.html
+++ b/templates/base/mixes/criteria.html
@@ -6,14 +6,16 @@
     </p>
   </div>
 
-  <form class="form-horizontal" role="form">
-    <div class="form-group" data-ng-repeat="(key, a) in {{container}}.criteria.actions.POST">
-      {% verbatim %}
-      <label for="{{key}}" class="col-sm-2 control-label" data-ng-bind="a.label"></label>
-      <div class="col-sm-5">
-        <input type="email" class="form-control" id="{{key}}" placeholder="{{a.label}}" data-ng-bind="a.value">
+  <div class="col-xs-12">
+    <form class="form-horizontal" role="form">
+      <div class="form-group" data-ng-repeat="(key, a) in {{container}}.criteria.actions.POST">
+        {% verbatim %}
+        <label for="{{key}}" class="col-sm-2 control-label" data-ng-bind="::a.label | translate"></label>
+        <div class="col-sm-5">
+          <input type="email" class="form-control" id="{{key}}" placeholder="{{a.label}}" data-ng-bind="a.value">
+        </div>
+        {% endverbatim %}
       </div>
-      {% endverbatim %}
-    </div>
-  </form>
+    </form>
+  </div>
 </div>
